[package]
name = "swapper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.27.2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
codegen-units = 16
opt-level = 1
